add components for GIUrl, create UpdateFleetEventsCommand UpdateResearchCommand